minor changes connected frontend and backend

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,5 +8,5 @@ span.contrastingText {
     color: transparent;
     background: inherit;
     background-clip: text;
-    filter: invert(1) contrast(1.5);
+    filter: invert(1) grayscale(1) contrast(8);
 }
